cmake_minimum_required(VERSION 3.27)
project(class)

set(CMAKE_CXX_STANDARD 14)

add_executable(class
        p1.cpp
        p10.cpp
        p11.cpp
        p12.cpp
        p13.cpp
        p14.cpp
        p15.cpp
        p16.cpp
        p17.cpp
        p18.cpp
        p2.cpp
        p3.cpp
        p4.cpp
        p5.cpp
        p6.cpp
        p7.cpp
        p9.cpp)
